2001-03-23  Kalle Marjola  <rpr@wapit.com>

	* gw/smsc_http.c: various little fixes

2001-03-23  Tuomas Luttinen  <tuo@wapit.com>

	* utils/kannel-stable-rh*.spec (Requires): Now requires libxml2 >= 
	libxml2-2.2.0. 

2001-03-22  Kalle Marjola  <rpr@wapit.com>

	* gw/smsc_http.c: put smsc-id to correct place
	
2001-03-22  Kalle Marjola  <rpr@wapit.com>

	* gw/smsc_http.c: fixed several memory leaks

2001-03-22  Uoti Urpala  <uau@wapit.com>

	* gwlib/http.c: Fixed memory leak.

2001-03-21  Lars Wirzenius  <liw@iki.fi>

	* gwlib/cfg.h: Commented return value policy for octet strings.

2001-03-21  Tuomas Luttinen  <tuo@wapit.com>

	* configure.in, configure: Added the xml2-config that libxml-2.3.* and 
	newer want instead of xml-config. Tested with libxml-2.2.11 and 2.3.4.
	Yet to be tested with both libxml1 and libxml2 installed.

2001-03-21  Kalle Marjola  <rpr@wapit.com>

	* gwlib/xmlrpc.h|c: Updated, still missing many things
	
2001-03-21  Kalle Marjola  <rpr@wapit.com>

	* gwlib/xmlrpc.h|c: Added. Initial code to implement XML-RPC
	specification.

2001-03-21  Lars Wirzenius  <liw@iki.fi>

	* checks/check_http.sh: Kill server via HTTP, instead of via
	a signal. This way, if the server has trouble dying properly,
	it will be quite visible, instead of possibly hidden by signal
	handling.

2001-03-21  Uoti Urpala  <uau@wapit.com>

	* gwlib/http.c: Fixed memory leaks, updated keepalive connections
	to work again after Richard's changes (still left them disabled by
	default though).

2001-03-21  Uoti Urpala  <uau@wapit.com>

	* gw/bb_smscconn.c: Fixed incorrect test in sms_router, the
	smsc_id of a discarded message was logged only if it _was_ NULL.

2001-03-20  Richard Braakman  <dark@wapit.com>

	* gwlib/http.c: Server side now accepts POST requests.  This
	involved separating the header and body reading code into a
	section shared by server and client side.

	* Fixed a bug along the way which would cause busy-waiting in the